force-app/main/default/objects/Krow__Missing_Timesheet__c/Krow__Missing_Timesheet__c.object-meta.xml
<CustomObject>
    <description>This object used to hold the missing timesheet information for a resource.</description>
    <label>Missing Timesheet</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Missing Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missing Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>