force-app/main/default/objects/Krow__Missing_Timesheet__c/fields/Krow__Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Missing Timesheets</relationshipLabel>
    <relationshipName>Missing_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>