force-app/main/default/objects/Krow__Missing_Timesheet__c/fields/Krow__User__c.field-meta.xml
<CustomField>
    <fullName>Krow__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Missing Timesheets1</relationshipLabel>
    <relationshipName>Missing_Timesheets1</relationshipName>
    <type>Lookup</type>
</CustomField>